--- a/readme
+++ b/readme
@@ -1,69 +1,47 @@
-```
-████████████████████████████████████████████████████████████  ██╗  ██╗███████╗██╗     ██╗      ██████╗
-████████████████████████████████████████████████████████████  ██║  ██║██╔════╝██║     ██║     ██╔═══██╗
-███████████████████████████████████`.        ╙██████████████  ███████║█████╗  ██║     ██║     ██║   ██║
-████████████████████████████████▀  ¿▓▓▓▓▓▓▓▓▄/ "████████████  ██╔══██║██╔══╝  ██║     ██║     ██║   ██║
-██████████████████████████████▀.  ▓▓▓▓▓▓▓▓▓▓▓▓   ▐██████████  ██║  ██║███████╗███████╗███████╗╚██████╔╝▄█╗
-██████████████████████████████ `  ▓▓▓▓▓▓▓▓▓▓▓▓  ` ██████████  ╚═╝  ╚═╝╚══════╝╚══════╝╚══════╝ ╚═════╝ ╚═╝
-██████████████████████████████ `  ▓▓▓▓▓▓▓▓▓▓▓▓   ▄██████████
-▀██████████████████████████████▌  ▀▀▓▓▓▓▓▓▓▌╓╖. ████████████  ███╗   ██╗██╗ ██████╗███████╗  ████████╗ ██████╗
-█▄▀██████████████████████████████▄ ╩╦╙▀▀▀▀▀ ╣`,█████████████  ████╗  ██║██║██╔════╝██╔════╝  ╚══██╔══╝██╔═══██╗
-▄▀█▄╙█████████████████████▀▀▀▀█████▄▄ .... ,▄███████▀███████  ██╔██╗ ██║██║██║     █████╗       ██║   ██║   ██║
-██▄▀█▄╙█████████████████▀  ╪╢%╦══~╓,└ ╚▒▒▒ ╙▀|,╓╓═╤H   ▀████  ██║╚██╗██║██║██║     ██╔══╝       ██║   ██║   ██║
-█▀▀▀-▀█▌▄▀█████████████   ║▒▒▒▒▒▒▒▒▒▒╢╦ ╘ -╣▒▒▒▒▒▒▒▒▒╢╕   ▀█  ██║ ╚████║██║╚██████╗███████╗     ██║   ╚██████╔╝
-██▄▀██└║▄▄▄████████████▄          ═╕╕╕╕╕═╕═══════       ▄▄▄▄  ╚═╝  ╚═══╝╚═╝ ╚═════╝╚══════╝     ╚═╝    ╚═════╝
-████▄▀█▌║███  ████████▌         ╕   ╩▒▒▒▒▒▒▒▒▒Ñ          ███
-██████▌Ö▓▌   ▀██████████`╔▒▒╣ █ ▒▒m   ╚▒╢▒▒▒╩ -╣▒ ▌ ▒▒▒ ████  ███╗   ███╗███████╗███████╗████████╗  ██╗   ██╗ ██████╗ ██╗   ██╗
-████ -"" ∞╙,▀.╙▀███████╜ ▒▒▒ ▄█ Ñ   -   S.  ═▒▒▒▒ █ ║▒▒╕└███  ████╗ ████║██╔════╝██╔════╝╚══██╔══╝  ╚██╗ ██╔╝██╔═══██╗██║   ██║
-████████▄ -«   ∞▄.▀",╓═     ╒██   ═╣▒▒ `Ñ╛        █▌ ▒▒▒ ███  ██╔████╔██║█████╗  █████╗     ██║      ╚████╔╝ ██║   ██║██║   ██║
-█████████▌ º     ╤╣▒╣╩^",▄▄███▀  ▒▒╣"     ''''''' ▀▀     `██  ██║╚██╔╝██║██╔══╝  ██╔══╝     ██║       ╚██╔╝  ██║   ██║██║   ██║
-█████████  ▌       ▄▄████████─         ---------    L'▒▒▒ ██  ██║ ╚═╝ ██║███████╗███████╗   ██║        ██║   ╚██████╔╝╚██████╔╝
-▀▀▀▀▀▀▀▀▀▀▀▀▀-     ▀▀▀▀▀▀▀▀▀▀       '╧╧╧╧╧╧╧╧╧`     ╚ ╧╧╧- ▀  ╚═╝     ╚═╝╚══════╝╚══════╝   ╚═╝        ╚═╝    ╚═════╝  ╚═════╝
-```
-# Voice Control Assistant (Python)
 
-<img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Microphone.webp" width="70" alt="Mic Icon" />
+# 🖥️ Voice Control Assistant (Python)
 
-نظام أوامر صوتية بيشغّل أوامر على الكمبيوتر مباشرة،  
-زي التحكم في الصوت، السطوع، البرامج، اليوتيوب، التابس، الويندوز، وغيرها…  
-المشروع بيعتمد على التعرف الصوتي باستخدام **Vosk** وتشغيل الأوامر عبر **Keyboard Automation**.
+نظام أوامر صوتية ذكي يتحكم في جهازك بالكامل بالعربي وبدون إنترنت،  
+بيعتمد على **Vosk** للتعرف على الصوت وتشغيل الأوامر مباشرة عبر **Keyboard Automation**.
 
 ---
 
-##  مميزات المشروع
+## ⭐ مميزات المشروع  
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Check%20Mark%20Button.webp" width="55" />
 
-- التعرف على الصوت بدون إنترنت (Offline STT)
-- أوامر عربية بالكامل
-- تحكم كامل بالويندوز (صوت – سطوع – برامج – تابز – مدير المهام – إغلاق – Sleep – Restart)
-- تحكم كامل باليوتيوب (Play / Pause / Forward / Rewind / Captions / Fullscreen)
-- فتح المواقع والتطبيقات والبحث
-- تسجيل صوت ذكي يتوقف تلقائيًا عند الصمت
+- التعرف على الصوت Offline  
+- أوامر عربية بالكامل  
+- تحكم كامل بالويندوز (صوت – سطوع – فتح البرامج – التابات – Sleep – Restart – Shutdown)  
+- تحكم كامل باليوتيوب (تشغيل – إيقاف – تقديم – تأخير – ترجمة – شاشة كاملة)  
+- فتح المواقع والبحث  
+- تسجيل صوت يتوقف عند الصمت تلقائيًا  
+- سريع وخفيف
 
 ---
 
-## <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Package.webp" width="60" />المكتبات المطلوبة
+## 📦 المكتبات المطلوبة  
+<img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Package.webp" width="60" />
 
-المشروع محتاج المكتبات دي (Vosk Model مش محتاج تحميل من pip لأنك هتحطه جنب الكود):
+> **ملاحظة:** نموذج Vosk بتحطه في فولدر `model` جنب المشروع.
 
-### 🎤 الصوت والتسجيل
+### 🎤 الصوت  
 - vosk  
 - sounddevice  
 - pyaudio  
 
-### ⌨️ التحكم في النظام
+### ⌨️ التحكم في النظام  
 - keyboard  
 - pynput  
 
-### 🔊 تحويل النص لصوت
+### 🔊 تحويل النص لصوت  
 - gTTS  
 
-### 🧮 مساعدات
+### 🧮 مساعدات  
 - numpy  
 
 ---
 
-## 🚀 تثبيت كل المكاتب في أمر واحد  
+## 🚀 تثبيت كل المكتبات في أمر واحد  
 <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Rocket.webp" width="70" />
 
 ```bash
@@ -74,12 +52,10 @@ pip install vosk sounddevice pyaudio keyboard pynput gTTS numpy
 
 ## ⚠️ حل مشكلة PyAudio على Windows
 
-لو PyAudio عمل Error (وده الطبيعي على Windows):
-
-حمّل النسخة الجاهزة من هنا:
+نزّل النسخة المناسبة من الموقع:
 [https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio](https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio)
 
-وبعدها ثبّتها:
+ثم ثبّتها:
 
 ```bash
 pip install PyAudio-0.2.13-cp310-cp310-win_amd64.whl
@@ -94,7 +70,7 @@ project-folder/
 │── main.py
 │── model/
 │     └── vosk-model-ar-mgb2-0.4
-│──   └──vosk-model-small-en-us-0.15
+│     └── vosk-model-small-en-us-0.15
 ```
 
 ---
@@ -105,40 +81,57 @@ project-folder/
 python main.py
 ```
 
-بعد ما البرنامج يشتغل هتسمع:
+لما يظهر:
 **Listening...**
-وتبدأ تقول الأوامر بالعربي عادي.
+ابدأ قول الأوامر.
 
 ---
 
-##  أمثلة أوامر جاهزة
+## 🗣️ أمثلة أوامر
 
-### التحكم
+### 🔊 التحكم
 
-* "ارفع الصوت"
-* "قلل السطوع"
-* "اقفل التاب"
-* "قفل الشاشة"
+* ارفع الصوت
+* قلل السطوع
+* اقفل التاب
+* اقفل الجهاز
 
-### اليوتيوب
+### 📺 اليوتيوب
 
-* "شغل الفيديو"
-* "قدم 10 ثواني"
-* "ترجمة الفيديو"
-* "شاشة كاملة"
+* شغل الفيديو
+* قدم 10 ثواني
+* شغل الترجمة
+* شاشة كاملة
 
-### البرامج
+### 💻 البرامج
 
-* "افتح كروم"
-* "افتح الالة الحاسبة"
-* "افتح فيجوال كود"
+* افتح كروم
+* افتح الحاسبة
+* افتح فيجوال ستوديو كود
 
 ---
 
-## 📜 الترخيص
+## 📜 License
 
 المشروع مفتوح المصدر للاستخدام والتطوير.
 
 ---
-## copyright © 2025
-- a r s i n e k 
+
+## © 2025
+
+**a r s i n e k**
+
+---
+
+## 📞 للتواصل
+
+<img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Telegram-Animated-Emojis/main/Symbols/Telephone.webp" width="55" />
+
+* **Phone / WhatsApp:** +201141345223
+* **Email:** [ayrn194@gmail.com](mailto:ayrn194@gmail.com)
+* **GitHub:** [https://github.com/kl0l69](https://github.com/kl0l69)
+* **Facebook:** [https://facebook.com/nq703](https://facebook.com/nq703)
+* **Instagram:** [https://instagram.com/kl0l69](https://instagram.com/kl0l69)
+* **Telegram:** [https://t.me/nq703](https://t.me/nq703)
+
+==
